@@ -387,6 +387,7 @@ typedef void * NXC_SESSION;
 #define F_LAST       0
 #define F_AVERAGE    1
 #define F_DEVIATION  2
+#define F_DIFF       3
 
 #define OP_LE        0
 #define OP_LE_EQ     1
